Prepared scanning page

--- a/views/index.html
+++ b/views/index.html
@@ -267,6 +267,12 @@
                         <span>Chat</span>
                     </div>
                 </a>
+                <a href="index.html" class="footer-nav-single_camera">
+                    <div class="menu-wrapper">
+                        <img src="assets/img/icons/home.svg" class="injectable" alt="">
+                        <span>Home</span>
+                    </div>
+                </a>
                 <a href="cart.html" class="footer-nav-single">
                     <div class="menu-wrapper">
                         <img src="assets/img/icons/cart.svg" class="injectable" alt="">
