--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1162,6 +1162,99 @@ header .header-menu-trigger:focus {
 
 /*=====  End of Footer ======*/
 
+.footer-nav-wrapper {
+	position: fixed;
+	z-index: 99;
+	bottom: 0;
+	left: 0;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	-webkit-justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	width: 100%;
+	padding: 0 40px;
+	border-radius: 60px;
+	background-color: #ffffff;
+	-webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16);
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16);
+}
+
+.footer-nav-single_camera {
+	position: relative;
+	display: block;
+	width: 85px;
+	height: 85px;
+	text-align: center;
+	border-radius: 50%;
+}
+
+
+.footer-nav-single_camera span {
+	font-size: 12px;
+	color: #ffffff;
+}
+
+.footer-nav-single_camera svg {
+	display: block;
+	margin: 0 auto;
+	margin-bottom: 5px;
+}
+
+.footer-nav-single_camera .menu-wrapper {
+	line-height: 1;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+
+.footer-nav-single:before {
+	position: absolute;
+	z-index: -1;
+	top: -5px;
+	left: -5px;
+	visibility: hidden;
+	width: calc(100% + 10px);
+	height: calc(100% + 10px);
+	content: "";
+	opacity: 0;
+	border-radius: 50%;
+	background-color: #a31f1f;
+}
+
+.footer-nav-single_camera,
+.footer-nav-single_camera:hover,
+.footer-nav-single_camera.active {
+	background-color: #44f253;
+}
+
+.footer-nav-single_camera,
+.footer-nav-single_camera:hover span,
+.footer-nav-single_camera.active span {
+	color: #ffffff;
+}
+
+.footer-nav-single_camera,
+.footer-nav-single_camera:hover svg *,
+.footer-nav-single_camera.active svg * {
+	stroke: #ffffff;
+}
+
+.footer-nav-single_camera,
+.footer-nav-single_camera:hover:before,
+.footer-nav-single_camera.active:before {
+	visibility: visible;
+	opacity: 1;
+}
+
+/*=====  End of Footer ======*/
+
 /*=============================================
 =            Button            =
 =============================================*/
