Added front scanning screen and page title

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1231,7 +1231,7 @@ header .header-menu-trigger:focus {
 .footer-nav-single_camera,
 .footer-nav-single_camera:hover,
 .footer-nav-single_camera.active {
-	background-color: #44f253;
+	background-color: #77bc3f;
 }
 
 .footer-nav-single_camera,
