--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Rick | Mobile eCommerce HTML Template</title>
+    <title>GO Parking</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -207,42 +207,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6">
-                                    <div class="grid-product space-mb--20">
-                                        <div class="grid-product__image">
-                                            <a href="shop-product.html">
-                                                <img src="assets/img/products/medium-notebook.jpg" class="img-fluid" alt="">
-                                            </a>
-                                            <button class="icon"><img src="assets/img/icons/heart-dark.svg" class="injectable" alt=""></button>
-                                        </div>
-                                        <div class="grid-product__content">
-                                            <h3 class="title"><a href="shop-product.html">Medium Notebook</a></h3>
-                                            <span class="category">Shoe</span>
-                                            <div class="price">
-                                                <span class="main-price">$50</span>
-                                                <span class="discounted-price">$20</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="grid-product space-mb--20">
-                                        <div class="grid-product__image">
-                                            <a href="shop-product.html">
-                                                <img src="assets/img/products/maths-notebook.jpg" class="img-fluid" alt="">
-                                            </a>
-                                            <button class="icon"><img src="assets/img/icons/heart-dark.svg" class="injectable" alt=""></button>
-                                        </div>
-                                        <div class="grid-product__content">
-                                            <h3 class="title"><a href="shop-product.html">Maths Notebook</a></h3>
-                                            <span class="category">Shoe</span>
-                                            <div class="price">
-                                                <span class="main-price">$150</span>
-                                                <span class="discounted-price">$120</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                               
 
 
                             </div>
@@ -269,8 +234,8 @@
                 </a>
                 <a href="index.html" class="footer-nav-single_camera">
                     <div class="menu-wrapper">
-                        <img src="assets/img/icons/home.svg" class="injectable" alt="">
-                        <span>Home</span>
+                        <img src="assets/img/icons/camera.svg" class="injectable" alt="">
+                        <span>Scan</span>
                     </div>
                 </a>
                 <a href="cart.html" class="footer-nav-single">
