--- a/views/chat.html
+++ b/views/chat.html
@@ -113,7 +113,7 @@
                         <a href="index.html" class="back-link"> <i class="fa fa-angle-left"></i> Back</a>
                     </div>
                     <div class="col-6">
-                        <h1 class="page-title text-center">Chat</h1>
+                        <h1 class="page-title text-center">chat</h1>
                     </div>
                 </div>
             </div>
@@ -241,7 +241,7 @@
                 <a href="chat.html" class="footer-nav-single">
                     <div class="menu-wrapper">
                         <img src="assets/img/icons/chat.svg" class="injectable" alt="">
-                        <span>Chat</span>
+                        <span>chat</span>
                     </div>
                 </a>
                 <a href="cart.html" class="footer-nav-single">
