--- a/views/index.html
+++ b/views/index.html
@@ -167,51 +167,8 @@
                 <div class="row">
                     <div class="col-12">
                         <!-- section title -->
-                        <h2 class="section-title space-mb--20">All Products</h2>
                         <!-- all products -->
-                        <div class="all-products-wrapper space-mb-m--20">
-                            <div class="row row-10">
-                                <div class="col-6">
-                                    <div class="grid-product space-mb--20">
-                                        <div class="grid-product__image">
-                                            <a href="shop-product.html">
-                                                <img src="assets/img/products/pen.jpg" class="img-fluid" alt="">
-                                            </a>
-                                            <button class="icon"><img src="assets/img/icons/heart-dark.svg" class="injectable" alt=""></button>
-                                        </div>
-                                        <div class="grid-product__content">
-                                            <h3 class="title"><a href="shop-product.html">Pen</a></h3>
-                                            <span class="category">Bag</span>
-                                            <div class="price">
-                                                <span class="main-price">$460</span>
-                                                <span class="discounted-price">$320</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="grid-product space-mb--20">
-                                        <div class="grid-product__image">
-                                            <a href="shop-product.html">
-                                                <img src="assets/img/products/blue-pen.jpg" class="img-fluid" alt="">
-                                            </a>
-                                            <button class="icon"><img src="assets/img/icons/heart-dark.svg" class="injectable" alt=""></button>
-                                        </div>
-                                        <div class="grid-product__content">
-                                            <h3 class="title"><a href="shop-product.html">Blue Pen</a></h3>
-                                            <span class="category">Cosmetics</span>
-                                            <div class="price">
-                                                <span class="main-price">$40</span>
-                                                <span class="discounted-price">$30</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                               
-
-
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -229,13 +186,13 @@
                 <a href="chat.html" class="footer-nav-single">
                     <div class="menu-wrapper">
                         <img src="assets/img/icons/chat.svg" class="injectable" alt="">
-                        <span>Chat</span>
+                        <span>chat</span>
                     </div>
                 </a>
-                <a href="index.html" class="footer-nav-single_camera">
+                <a href="shop-product.html" class="footer-nav-single_camera">
                     <div class="menu-wrapper">
                         <img src="assets/img/icons/camera.svg" class="injectable" alt="">
-                        <span>Scan</span>
+                        <span>Start</span>
                     </div>
                 </a>
                 <a href="cart.html" class="footer-nav-single">
