--- a/views/notification.html
+++ b/views/notification.html
@@ -155,7 +155,7 @@
                 <a href="chat.html" class="footer-nav-single">
                     <div class="menu-wrapper">
                         <img src="assets/img/icons/chat.svg" class="injectable" alt="">
-                        <span>Chat</span>
+                        <span>chat</span>
                     </div>
                 </a>
                 <a href="cart.html" class="footer-nav-single">
