--- a/views/shop-product.html
+++ b/views/shop-product.html
@@ -108,31 +108,25 @@
         <!--====================  product image slider ====================-->
         <div class="product-image-slider-wrapper space-pb--30 space-mb--30">
             <div class="product-image-single">
-                <img src="assets/img/product-slider/product1.png" class="img-fluid" alt="">
+                <img src="assets/img/products/car1.jpg" class="img-fluid" alt="">
             </div>
         </div>
         <!--====================  End of product image slider  ====================-->
         <!--====================  product content ====================-->
-        <!-- product content header -->
-        <div class="product-content-header-area border-bottom--thick space-pb--30">
+        
+        
+        <div class="grand-total space-mt--20">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="product-content-header">
-                            <div class="product-content-header__main-info">
-                                <h3 class="title">CBM 607</h3>
-                            </div>
-                        </div>
+                        <h4 class="grand-total-title">Plate number <span>GRB 494</span></h4>
+                        <a href="checkout.html">Report</a>
                     </div>
                 </div>
             </div>
         </div>
-        
-        <!-- shop product button -->
-        <div class="shop-product-button">
-            <button class="buy">SUBMIT</button>
-        </div>
 
+        
         <!--====================  End of product content  ====================-->
         <!--====================  footer area ====================-->
         <footer>
@@ -146,7 +140,13 @@
                 <a href="chat.html" class="footer-nav-single">
                     <div class="menu-wrapper">
                         <img src="assets/img/icons/chat.svg" class="injectable" alt="">
-                        <span>Chat</span>
+                        <span>chat</span>
+                    </div>
+                </a>
+                <a href="index.html" class="footer-nav-single_camera">
+                    <div class="menu-wrapper">
+                        <img src="assets/img/icons/camera.svg" class="injectable" alt="">
+                        <span>Scan</span>
                     </div>
                 </a>
                 <a href="cart.html" class="footer-nav-single">
