--- a/public/assets/scss/5-sections/_chat.scss
+++ b/public/assets/scss/5-sections/_chat.scss
@@ -7,7 +7,7 @@
     padding: 15px 15px 40px 15px;
 }
 
-/*Chat List*/
+/*chat List*/
 .chat-list {
     margin: 0;
     padding: 0;
@@ -52,7 +52,7 @@
     }
 }
 
-/*Chat*/
+/*chat*/
 .chat {
     // Head
     & .head {
@@ -143,7 +143,7 @@
     }
 }
 
-/*Chat Submission*/
+/*chat Submission*/
 .chat-submission {
     position: fixed;
     bottom: 85px;
