--- a/public/assets/scss/5-sections/_product.scss
+++ b/public/assets/scss/5-sections/_product.scss
@@ -465,7 +465,7 @@
         line-height: 1;
 
         display: block;
-        flex-basis: 50%;
+        flex-basis: 100%;
 
         padding: 15px 0;
 
@@ -485,6 +485,16 @@
     }
 }
 
+#block {
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: #04AA6D;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+  }
 
 /* shop header */
 
