Upgraded image fake detected car number plate page

--- a/views/shop-product.html
+++ b/views/shop-product.html
@@ -106,7 +106,7 @@
         </div>
         <!--====================  End of mobile menu overlay  ====================-->
         <!--====================  product image slider ====================-->
-        <div class="product-image-slider-wrapper space-pb--30 space-mb--30">
+        <div class="space-pb--10 space-mb--10">
             <div class="product-image-single">
                 <img src="assets/img/products/car1.jpg" class="img-fluid" alt="">
             </div>
