--- a/views/shop-product.html
+++ b/views/shop-product.html
@@ -108,7 +108,7 @@
         <!--====================  product image slider ====================-->
         <div class="space-pb--10 space-mb--10">
             <div class="product-image-single">
-                <img src="assets/img/products/car1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/products/car1.gif" class="img-fluid" alt="">
             </div>
         </div>
         <!--====================  End of product image slider  ====================-->
