--- a/views/shop-product.html
+++ b/views/shop-product.html
@@ -27,6 +27,54 @@
 			-->
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <style>
+        /* CSS comes here */
+        #video {
+            border: 1px solid black;
+            width: 320px;
+            height: 240px;
+        }
+    
+        #photo {
+            border: 1px solid black;
+            width: 320px;
+            height: 240px;
+        }
+    
+        #canvas {
+            display: none;
+        }
+    
+        .camera {
+            width: 340px;
+            display: inline-block;
+        }
+    
+        .output {
+            width: 340px;
+            display: inline-block;
+        }
+    
+        /* #startbutton {
+            display: block;
+            position: relative;
+            margin-left: auto;
+            margin-right: auto;
+            bottom: 36px;
+            padding: 5px;
+            background-color: #6a67ce;
+            border: 1px solid rgba(255, 255, 255, 0.7);
+            font-size: 14px;
+            color: rgba(255, 255, 255, 1.0);
+            cursor: pointer;
+        } */
+    
+        .contentarea {
+            font-size: 16px;
+            font-family: Arial;
+            text-align: center;
+        }
+        </style>
 </head>
 <body>
     <!--====================  preloader area ====================-->
@@ -106,9 +154,48 @@
         </div>
         <!--====================  End of mobile menu overlay  ====================-->
         <!--====================  product image slider ====================-->
+
+
+
+
+        <div class="grand-total ">
+            
+        </div>
+
+
+
         <div class="space-pb--10 space-mb--10">
             <div class="product-image-single">
-                <img src="assets/img/products/car1.gif" class="img-fluid" alt="">
+                <!-- <img src="assets/img/products/car1.gif" class="img-fluid" alt=""> -->
+
+
+
+
+
+                <div class="contentarea">
+                    <h4>
+                        Make a good quality photo
+                    </h4>
+                    <div class="camera">
+                        <video id="video">Video stream not available.</video>
+                    </div>
+                    
+                    <canvas id="canvas"></canvas>
+                    <div class="output">
+                        <img id="photo" alt="The screen capture will appear in this box.">
+                    </div>
+                </div>
+            
+                
+
+
+
+
+
+
+
+
+                
             </div>
         </div>
         <!--====================  End of product image slider  ====================-->
@@ -143,10 +230,10 @@
                         <span>chat</span>
                     </div>
                 </a>
-                <a href="index.html" class="footer-nav-single_camera">
+                <a  id="startbutton" class="footer-nav-single_camera">
                     <div class="menu-wrapper">
                         <img src="assets/img/icons/camera.svg" class="injectable" alt="">
-                        <span>Scan</span>
+                         <span>Scan</span> 
                     </div>
                 </a>
                 <a href="cart.html" class="footer-nav-single">
@@ -185,5 +272,89 @@
 -->
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
+
+    <script>
+        /* JS comes here */
+        (function() {
+    
+            var width = 320; // We will scale the photo width to this
+            var height = 0; // This will be computed based on the input stream
+    
+            var streaming = false;
+    
+            var video = null;
+            var canvas = null;
+            var photo = null;
+            var startbutton = null;
+    
+            function startup() {
+                video = document.getElementById('video');
+                canvas = document.getElementById('canvas');
+                photo = document.getElementById('photo');
+                startbutton = document.getElementById('startbutton');
+    
+                navigator.mediaDevices.getUserMedia({
+                        video: true,
+                        audio: false
+                    })
+                    .then(function(stream) {
+                        video.srcObject = stream;
+                        video.play();
+                    })
+                    .catch(function(err) {
+                        console.log("An error occurred: " + err);
+                    });
+    
+                video.addEventListener('canplay', function(ev) {
+                    if (!streaming) {
+                        height = video.videoHeight / (video.videoWidth / width);
+    
+                        if (isNaN(height)) {
+                            height = width / (4 / 3);
+                        }
+    
+                        video.setAttribute('width', width);
+                        video.setAttribute('height', height);
+                        canvas.setAttribute('width', width);
+                        canvas.setAttribute('height', height);
+                        streaming = true;
+                    }
+                }, false);
+    
+                startbutton.addEventListener('click', function(ev) {
+                    takepicture();
+                    ev.preventDefault();
+                }, false);
+    
+                clearphoto();
+            }
+    
+    
+            function clearphoto() {
+                var context = canvas.getContext('2d');
+                context.fillStyle = "#AAA";
+                context.fillRect(0, 0, canvas.width, canvas.height);
+    
+                var data = canvas.toDataURL('image/png');
+                photo.setAttribute('src', data);
+            }
+    
+            function takepicture() {
+                var context = canvas.getContext('2d');
+                if (width && height) {
+                    canvas.width = width;
+                    canvas.height = height;
+                    context.drawImage(video, 0, 0, width, height);
+    
+                    var data = canvas.toDataURL('image/png');
+                    photo.setAttribute('src', data);
+                } else {
+                    clearphoto();
+                }
+            }
+    
+            window.addEventListener('load', startup, false);
+        })();
+        </script>
 </body>
 </html>
