--- a/views/profile.html
+++ b/views/profile.html
@@ -115,11 +115,11 @@
                                 <img src="assets/img/profile.jpg" class="img-fluid" alt="">
                             </div>
                             <div class="profile-header__content space-mt--10">
-                                <h3 class="name space-mb--15">Nicholas J. Echeverria</h3>
+                                <h3 class="name space-mb--15">Vardenė Pavardenė</h3>
                                 <div class="profile-info space-mb--10">
                                     <div class="profile-info-block">
                                         <div class="profile-info-block__value">
-                                            MB 4350
+                                            41AT-3631
                                         </div>
                                         <div class="profile-info-block__title">
                                             ID Number
@@ -127,7 +127,7 @@
                                     </div>
                                     <div class="profile-info-block">
                                         <div class="profile-info-block__value">
-                                            346 ($40)
+                                            34
                                         </div>
                                         <div class="profile-info-block__title">
                                             Points
@@ -136,7 +136,7 @@
                                 </div>
                                 <div class="profile-level">
                                     <div class="profile-level__title">
-                                        Level 04
+                                        Level 03
                                     </div>
                                     <div class="profile-level__progress progress">
                                         <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -158,28 +158,21 @@
                             <div class="profile-info-table space-mb--40">
                                 <div class="profile-info-block">
                                     <div class="profile-info-block__title">Full Name</div>
-                                    <div class="profile-info-block__value">Don Normane</div>
+                                    <div class="profile-info-block__value">Vardenė Pavardenė</div>
                                 </div>
                                 <div class="profile-info-block">
                                     <div class="profile-info-block__title">User Name</div>
-                                    <div class="profile-info-block__value">john007</div>
+                                    <div class="profile-info-block__value">pavardeniuke123</div>
                                 </div>
                                 <div class="profile-info-block">
                                     <div class="profile-info-block__title">Phone</div>
-                                    <div class="profile-info-block__value">(+1) 223556 66</div>
+                                    <div class="profile-info-block__value">(+370) 642 15 671 </div>
                                 </div>
                                 <div class="profile-info-block">
                                     <div class="profile-info-block__title">E-mail Address</div>
-                                    <div class="profile-info-block__value">demo@mail.com</div>
+                                    <div class="profile-info-block__value">responsible.citizen@gmail.com</div>
                                 </div>
-                                <div class="profile-info-block">
-                                    <div class="profile-info-block__title">Shipping Address</div>
-                                    <div class="profile-info-block__value">935-1670 Neque. St. Centennial Delaware 48432</div>
-                                </div>
-                                <div class="profile-info-block">
-                                    <div class="profile-info-block__title">Total Order</div>
-                                    <div class="profile-info-block__value">25</div>
-                                </div>
+                                
                                 <div class="profile-info-block">
                                     <div class="profile-info-block__title">Edit Profile</div>
                                     <div class="profile-info-block__value"><a href="edit-profile.html"><img src="assets/img/icons/edit.svg" class="injectable" alt=""></a></div>
@@ -187,16 +180,8 @@
                             </div>
                             <div class="profile-info-table">
                                 <div class="profile-info-block">
-                                    <div class="profile-info-block__title">Help Center</div>
-                                    <div class="profile-info-block__value">62256</div>
-                                </div>
-                                <div class="profile-info-block">
-                                    <div class="profile-info-block__title">To be Shiped</div>
-                                    <div class="profile-info-block__value">05</div>
-                                </div>
-                                <div class="profile-info-block">
-                                    <div class="profile-info-block__title">Review</div>
-                                    <div class="profile-info-block__value">10</div>
+                                    <div class="profile-info-block__title">Distance travelled</div>
+                                    <div class="profile-info-block__value">32 km</div>
                                 </div>
                             </div>
                         </div>
