index view text added

--- a/views/index.html
+++ b/views/index.html
@@ -119,8 +119,8 @@
                                         <div class="col-12">
                                             <!-- hero slider content -->
                                             <div class="hero-slider-content">
-                                                <h1 class="hero-slider-content__title space-mb--10">1. Find your <br>  <span style="color:#7ed957;">Mini</span>Shop   </h1>
-                                                <p class="hero-slider-content__text">Scan QR code or type a link</p>
+                                                <h1 class="hero-slider-content__title space-mb--10">1. Take a picture</h1>
+                                                <p class="hero-slider-content__text">that contains a parked car</p>
                                             </div>
                                         </div>
                                     </div>
@@ -132,8 +132,8 @@
                                         <div class="col-12">
                                             <!-- hero slider content -->
                                             <div class="hero-slider-content">
-                                                <h1 class="hero-slider-content__title space-mb--10">2. Find a Product</h1>
-                                                <p class="hero-slider-content__text">and pay securely online</p>
+                                                <h1 class="hero-slider-content__title space-mb--10">2. Review and accept</h1>
+                                                <p class="hero-slider-content__text">suggested licence plate number</p>
                                             </div>
                                         </div>
                                     </div>
@@ -145,8 +145,8 @@
                                         <div class="col-12">
                                             <!-- hero slider content -->
                                             <div class="hero-slider-content">
-                                                <h1 class="hero-slider-content__title space-mb--10">3. Get the Product NOW</h1>
-                                                <p class="hero-slider-content__text">It will be dispensed by our  <span style="color:#7ed957;">Mini</span>Shop</p>
+                                                <h1 class="hero-slider-content__title space-mb--10">3. Collect points</h1>
+                                                <p class="hero-slider-content__text">and enjoy the benefits</p>
                                             </div>
                                         </div>
                                     </div>
